--- a/apis.yml
+++ b/apis.yml
@@ -5,18 +5,15 @@ description: |-
   These are all of the schema that Naftiko uses to guide the product, go-to-market, and revenue work.
 tags:
   - Schema
-  - Registry
 created: '2025-11-15'
 modified: '2025-11-15'
 url: https://github.com/naftiko/schema/blob/main/apis.yml
 specificationVersion: '0.19'
 include:
-  - name: Capability
-    url: capability/apis.yml
-  - name: Engine
-    url: engine/apis.yml
-  - name: Fabric
-    url: fabric/apis.yml        
+  - name: Core
+    url: core/apis.yml
+  - name: Ecosystem
+    url: ecosystem/apis.yml      
 maintainers:
   - FN: Kin Lane
     email: kinlane@naftiko.io
