--- a/secondary/use-case/use-case-example-v0.1.0.yml
+++ b/secondary/use-case/use-case-example-v0.1.0.yml
@@ -1,43 +1,83 @@
-- name: AI Model Context
+- name: AI Context
   description: |-
-
-    This use focuses on providing Model Context Protocol (MCP) servers on top of common third-party engineering, business, marketing, and financial APIs using declarative capabilities that simplify onboarding and configuration, saving time. These simple, easy-to-use MCP servers have security and governance built in.
+    This use case focuses on providing Model Context Protocol (MCP) servers on top of common third-party engineering, business, marketing, and financial APIs using declarative capabilities that simplify onboarding and configuration, saving time. These simple, easy-to-use MCP servers have security and governance built in.
 
     Teams need a reliable way to deliver MCP servers from internal and third-party APIs without having to discover and learn about each API and the technical details of integration. This use case provides the fundamentals for integrating legacy data and systems into artificial intelligence copilots and agents.
 
-- name: SQL Data Access
-  description: |-
-
-    This use case seeks to consistently unlock the data companies currently depend upon across multiple third-party SaaS providers and a variety of existing database connections via JDBC and ODBC to ensure AI integrations have the data they require. Data today is spread across many internal and external systems, and making it consistently available as part of AI integrations has significantly slowed the delivery of new products and features.
-
-    Teams benefit from consistent SQL access to data sources via ODBC/JDBC interfaces, and expanding this access to third-party SaaS will help teams provide the context, resources, tooling, and data needed to deliver AI integrations across the enterprise. The capability and resulting engine deployment for this use case provides a unified, consolidated, and simplified approach to providing the data needed to power individual AI integrations within specific business domains.
-
-- name: AI Model Mediation
-  description: |-
-
-    This use case focuses on managing different artificial intelligence models, providing an open-source alternative to OpenRouter that helps teams manage development across multiple public and private API models. Model routing is primarily done using the APIs of leading AI service providers, which has led to the emergence of companies like OpenRouter that broker the usage of different AI models from various providers for diverse business use cases.
-
-    Teams need a reliable way to deliver applications and automation using many different public or private, open-source or commercial models. This use case provides the fundamentals for integrating across multiple AI model providers and immediately gaining more control over how small and large language models are being used as part of applications, automation, and direct integrations—optimizing cost, velocity, and risk across AI integrations.
-
-- name: Data Sovereignty
-  description: |-
-
-    This use case focuses on empowering companies to take control of their data that resides across the third-party SaaS solutions they use regularly. The data sovereignty movement is centered on establishing more control over the data generated across the different services you depend on, ensuring data is integrated, migrated, and synced to data and object stores where a company has full control and access.
-
-    Data sovereignty enables teams to localize data and train local AI models using the data they produce across third-party platforms. This use case may be aligned with country or regional regulations, or it may simply be part of enterprise compliance programs. Data sovereignty investments have increased as part of the growth of AI integrations and the need for context across third-party systems, as well as the increasing value of data itself.
+  benefits:
+    - Add data and tools to agents
+    - Compose MCP servers
+    - Aggregate & curate context
 
 - name: API Reusability
   description: |-
-
     This use case is concerned with encouraging the discoverability and reuse of existing APIs, leveraging existing API infrastructure to quantify what API, schema, and tooling reuse looks like, and incentivizing reuse of APIs and schema across the software development lifecycle—reducing API sprawl and hardening the APIs that already exist.
 
     Teams need to be able to easily use existing API paths and operations as part of new integrations and automation, ensuring that paths, operations, and schema are available within IDE and copilot tooling—meeting developers where they already work. API reusability enables developers while also informing leadership regarding what API reuse looks like and where opportunities to refine exist.
 
-- name: Capability Consumption
-  description: |-      
+  benefits:
+    - Unlock access to legacy data
+    - Right-size & unify APIs
+    - Foundation for AI initiatives
 
+- name: AI Orchestration
+  description: |-
+    This use case provides the data, skills, and capabilities that artificial intelligence agents used internally can use to automate and orchestrate tasks while discovering and negotiating with other agents to accomplish specific goals. This use case employs the open-source Agent-2-Agent specification to securely and confidently enable agentic activity across operations.
+
+    As teams focus on responding to this AI moment and deploying MCP servers on top of existing APIs and other tooling, they need to begin understanding how to implement agentic automation and orchestration on top of MCP servers. Teams need structure and guidance when it comes to authentication and authorization, discovery, governance, and all the standardization required to deploy agents at scale.
+
+  benefits:
+    - Discover skills & capabilities
+    - Internal & external agents
+    - Implement A2A protocol
+
+- name: SQL Data Access
+  description: |-
+    This use case seeks to consistently unlock the data companies currently depend upon across multiple third-party SaaS providers and a variety of existing database connections via JDBC and ODBC to ensure AI integrations have the data they require. Data today is spread across many internal and external systems, and making it consistently available as part of AI integrations has significantly slowed the delivery of new products and features.
+
+    Teams benefit from consistent SQL access to data sources via ODBC/JDBC interfaces, and expanding this access to third-party SaaS will help teams provide the context, resources, tooling, and data needed to deliver AI integrations across the enterprise. The capability and resulting engine deployment for this use case provides a unified, consolidated, and simplified approach to providing the data needed to power individual AI integrations within specific business domains.
+
+  benefits:
+    - Unlock SaaS data
+    - JDBC / ODBC drivers
+    - Federated SQL processing
+
+- name: AI Model Mediation
+  description: |-
+    This use case focuses on managing different artificial intelligence models, providing an open-source alternative to OpenRouter that helps teams manage development across multiple public and private AI models. Model routing is primarily done using the APIs of leading AI service providers, which has led to the emergence of companies like OpenRouter that broker the usage of different AI models from various providers for diverse business use cases.
+
+    Teams need a reliable way to deliver applications and automation using many different public or private, open-source or commercial models. This use case provides the fundamentals for integrating across multiple AI model providers and immediately gaining more control over how small and large language models are being used as part of applications, automation, and direct integrations—optimizing cost, velocity, and risk across AI integrations.
+
+  benefits:
+    - Open-source implementation of model engine
+    - On-premise implementation of model engine
+    - Not limited to large language model domain
+    - Capability routing over model or service routing
+    - Business alignment with domain-driven consumption
+    - Makes all APIs and data sources first-class citizens
+    - Sovereign on-premise input and output controls
+    - Standards-driven integrations with OpenAPI, etc.
+    - FinOps Framework standardized price controls
+
+- name: Data Sovereignty
+  description: |-
+    This use case focuses on empowering companies to take control of their data that resides across the third-party SaaS solutions they use regularly. The data sovereignty movement is centered on establishing more control over the data generated across the different services you depend on, ensuring data is integrated, migrated, and synced to data and object stores where a company has full control and access.
+
+    Data sovereignty enables teams to localize data and train local AI models using the data they produce across third-party platforms. This use case may be aligned with country or regional regulations, or it may simply be part of enterprise compliance programs. Data sovereignty investments have increased as part of the growth of AI integrations and the need for context across third-party systems, as well as the increasing value of data itself.
+
+  benefits:
+    - Aggregate 3rd-party SaaS data
+    - Increase visibility of SaaS data
+    - Allow for more SaaS data discovery
+    - Encourage the reusability of SaaS data
+
+- name: Capability Consumption
+  description: |-
     This use case is designed to cover the general needs of the enterprise when it comes to integration with third-party SaaS. This use case allows for the widest possible definition of what is needed within a single domain, enabling exploration of which third-party services are required. This use case tends to focus specifically on the cost, velocity, and risk concerns of leadership, then identifying the services that are of particular concern.
 
     Teams need a way to centralize and standardize the usage and billing for third-party SaaS used as part of web, mobile, AI, or other types of applications. There is no consistent way to manage tokens, ensure encryption is used, and address other areas of concern when it comes to the risk across APIs. The capability consumption use case helps abstract away the general concerns of developers while providing the oversight leadership needs over different SaaS services.
 
-
+  benefits:
+    - Unlock access to legacy data
+    - Right-size & unify APIs
+    - Prepare foundation for AI future
